# ranktastic

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  index.html  justfile  nginx.conf  tailwind.config.ts
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  security.py
backend/app/models/: __init__.py  notification.py  poll.py  settings.py  user.py  vote.py
backend/app/routers/: admin.py  auth.py  health.py  notifications.py  polls.py  votes.py
backend/app/schemas/: auth.py  notification.py  poll.py  results.py  vote.py
backend/app/services/: email.py  irv.py  notifications.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  auth.ts  client.ts  polls.ts  votes.ts
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: Home.tsx  (+6 more)
server/: .gitignore  Dockerfile  health-check.js  index.js  init-db.sh  package.json  server.js
server/data/: .gitkeep
server/routes/: index.js
src/: App.tsx  index.css  main.tsx
src/components/: ApiStatusCheck.tsx  AppProviders.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  Navbar.tsx  PollCreator.tsx  PollResults.tsx  ProtectedCreatePoll.tsx  ProtectedRoute.tsx  SharePoll.tsx  VotingForm.tsx
src/contexts/: DebugContext.tsx
src/hooks/: use-db-initializer.ts
src/lib/: auth.ts  db.ts
src/pages/: AdminLogin.tsx  CreatePoll.tsx  HelpPage.tsx  Index.tsx  PollPage.tsx
unraid/: ranktastic.xml
(+62 files in other folders)
